[tool.poetry]
name = "microblocks_wifi_radio"
version = "0.5.0"
description = ""
authors = ["wwj718 <wuwenjie718@gmail.com>"]
readme = "README.md"
packages = [{include = "microblocks_wifi_radio"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
